# ojichat.py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml  publish.yml  pytest.yml
ojichat/: __main__.py
ojichat/generator/: generator.py
ojichat/pattern/: onara.py  tags.py
tests/: __init__.py  test_ojichat.py
