[tool.poetry]
name = "ojichat.py"
version = "0.0.1"
description = "Ojisan Nanchatte (ojichat) Generator"
authors = ["Charahiro-tan <charahiro_pypi@98304.win>"]
readme = "README.md"
repository = "https://github.com/Charahiro-tan/ojichat.py"
packages = [{include = "ojichat"}]
include = ["CREDITS.md"]
keywords = ["Japanese", "ojichat", "text", "generator"]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.11"
jaconv = "^0.3.4"
gimei = "^0.2.3"
janome = "^0.4.2"
logzero = "^1.7.0"

[tool.poetry.scripts]
ojichat = "ojichat.__main__:__main__"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
nuitka = "^1.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
