[tool.pdm]
version = { source = "file", path = "ojichat/__ver__.py"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.1",
    "nuitka>=1.5.7",
]

[tool.pdm.scripts]
ojichat = {call = "ojichat.__main__:__main__"}
test = "pytest"
nuitka = "python -m nuitka --onefile --include-package-data=gimei ojichat"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]

[project]
name = "ojichat.py"
description = "Ojisan Nanchatte (ojichat) Generator"
dynamic = ["version"]
authors = [
    {name = "Charahiro-tan", email = "charahiro_pypi@98304.win"},
]
urls = { repository = "https://github.com/Charahiro-tan/ojichat.py" }
dependencies = [
    "jaconv>=0.3.4",
    "gimei>=0.2.3",
    "janome>=0.4.2",
    "logzero>=1.7.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
keywords = ["Japanese", "ojichat", "text", "generator"]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
scripts = { ojichat = "ojichat.__main__:__main__" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
package-dir = "."
includes = ["ojichat", "CREDITS.md"]
excludes = ["tests"]